--- a/static/control.html
+++ b/static/control.html
@@ -43,7 +43,7 @@
 
         function connect() {
             const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
-            ws = new WebSocket(`${protocol}//${window.location.host}/ws`);
+            ws = new WebSocket(`${protocol}//${window.location.host}/ytremote/ws`);
 
             ws.onopen = function() {
                 console.log('WebSocket connected');
