--- a/static/view.html
+++ b/static/view.html
@@ -18,7 +18,7 @@
 
         function connect() {
             const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
-            ws = new WebSocket(`${protocol}//${window.location.host}/ws`);
+            ws = new WebSocket(`${protocol}//${window.location.host}/ytremote/ws`);
 
             ws.onopen = function() {
                 console.log('WebSocket connected');
